<resources>
   
    <string name="about_application">关于应用</string>
    <string name="about_data">。。。</string>
    <string name="about_date">。。。</string>
    <string name="app_name">教师信息管理</string>
    <string name="app_version">v0.9.0</string>
    <string name="assigned">发送消息</string>
    <string name="assigned_to">assigned_to</string>
    <string name="attack">attack</string>
    <string name="attribute">attribute</string>
    <string name="back">返回</string>
    <string name="belongs">belongs</string>
    <string name="btn_page_1">btn_page_1</string>
    <string name="btn_page_2">btn_page_2</string>
    <string name="btn_page_3">btn_page_3</string>
    <string name="cancel">取消</string>
    <string name="card_banned">card_banned</string>
    <string name="card_banned_pure">card_banned_pure</string>
    <string name="card_limit1">card_limit1</string>
    <string name="card_limit1_pure">card_limit1_pure</string>
    <string name="card_limit2">card_limit2</string>
    <string name="card_limit2_pure">card_limit2_pure</string>
    <string name="card_noadjust">card_noadjust</string>
    <string name="card_nopic">card_nopic</string>
    <string name="defense">defense</string>
    <string name="effect">effect</string>
    <string name="english_name">english_name</string>
    <string name="error_card_id">error_card_id</string>
    <string name="error_no_database">error_no_database</string>
    <string name="hint">hint</string>
    <string name="id_data">id_data</string>
    <string name="id_fit">id_fit</string>
    <string name="id_home">id_home</string>
    <string name="id_update">id_update</string>
    <string name="id_weibo">id_weibo</string>
    <string name="itm_adjust">itm_adjust</string>
    <string name="itm_card">itm_card</string>
    <string name="itm_home">itm_home</string>
    <string name="itm_list">itm_list</string>
    <string name="itm_pic">itm_pic</string>
    <string name="itm_search">itm_search</string>
    <string name="itm_tool">itm_tool</string>
    <string name="itm_weibo">itm_weibo</string>
    <string name="japan_name">japan_name</string>
    <string name="lad">lad</string>
    <string name="level">level</string>
    <string name="limit">limit</string>
    <string name="limit_date">limit_date</string>
    <string name="list_nocard">list_nocard</string>
    <string name="magic">magic</string>
    <string name="mitem_about">mitem_about</string>
    <string name="mitem_settings">mitem_settings</string>
    <string name="monster">monster</string>
    <string name="msg_no_database">msg_no_database</string>
    <string name="msg_not_impl">msg_not_impl</string>
    <string name="name">name</string>
    <string name="no_assigned_card">no_assigned_card</string>
    <string name="ok">ok</string>
    <string name="overlay">overlay</string>
    <string name="pack">pack</string>
    <string name="page_assignedcard">名师墙</string>
    <string name="page_cardinfo">教师信息</string>
    <string name="page_home">page_home</string>
    <string name="page_list">page_list</string>
    <string name="page_search">page_search</string>
    <string name="page_tool">page_tool</string>
    <string name="page_update">page_update</string>
    <string name="password">password</string>
    <string name="pref_data">pref_data</string>
    <string name="pref_data_msg">pref_data_msg</string>
    <string name="pref_data_s">pref_data_s</string>
    <string name="pref_fit">pref_fit</string>
    <string name="pref_fit_s">pref_fit_s</string>
    <string name="pref_fit_s0">pref_fit_s0</string>
    <string name="pref_fit_s1">pref_fit_s1</string>
    <string name="pref_fit_s2">pref_fit_s2</string>
    <string name="pref_fit_s3">pref_fit_s3</string>
    <string name="pref_home">pref_home</string>
    <string name="pref_update">pref_update</string>
    <string name="pref_update_soff">pref_update_soff</string>
    <string name="pref_update_son">pref_update_son</string>
    <string name="pref_weibo">pref_weibo</string>
    <string name="pref_weibo_s">pref_weibo_s</string>
    <string name="race">race</string>
    <string name="rare">rare</string>
    <string name="search_attack">search_attack</string>
    <string name="search_attribute">search_attribute</string>
    <string name="search_belongs">search_belongs</string>
    <string name="search_defense">search_defense</string>
    <string name="search_effect">search_effect</string>
    <string name="search_level">search_level</string>
    <string name="search_limit">search_limit</string>
    <string name="search_na">search_na</string>
    <string name="search_name">search_name</string>
    <string name="search_race">search_race</string>
    <string name="search_rare">search_rare</string>
    <string name="search_reset">search_reset</string>
    <string name="search_search">search_search</string>
    <string name="search_type">search_type</string>
    <string name="set_application">set_application</string>
    <string name="set_sns">set_sns</string>
    <string name="set_system">set_system</string>
    <string name="settings">settings</string>
    <string name="split">split</string>
    <string name="tool_again_coin">tool_again_coin</string>
    <string name="tool_again_dice">tool_again_dice</string>
    <string name="tool_coin">tool_coin</string>
    <string name="tool_coin1">tool_coin1</string>
    <string name="tool_coin2">tool_coin2</string>
    <string name="tool_coin_count">tool_coin_count</string>
    <string name="tool_dice">tool_dice</string>
    <string name="tool_dice1">tool_dice1</string>
    <string name="tool_dice2">tool_dice2</string>
    <string name="tool_dice3">tool_dice3</string>
    <string name="tool_dice4">tool_dice4</string>
    <string name="tool_dice5">tool_dice5</string>
    <string name="tool_dice6">tool_dice6</string>
    <string name="tool_dice_count">tool_dice_count</string>
    <string name="tool_divide">tool_divide</string>
    <string name="tool_double">tool_double</string>
    <string name="tool_half">tool_half</string>
    <string name="tool_minus">tool_minus</string>
    <string name="tool_number_reqired">tool_number_reqired</string>
    <string name="tool_oper">tool_oper</string>
    <string name="tool_opt">tool_opt</string>
    <string name="tool_p1Oper">tool_p1Oper</string>
    <string name="tool_p2Oper">tool_p2Oper</string>
    <string name="tool_player1">tool_player1</string>
    <string name="tool_player2">tool_player2</string>
    <string name="tool_plus">tool_plus</string>
    <string name="tool_reset">tool_reset</string>
    <string name="tool_set">tool_set</string>
    <string name="top100_date">近期更新信息的教师</string>
    <string name="trap">trap</string>
    <string name="type">type</string>
    <string name="update_apk">update_apk</string>
    <string name="update_data">update_data</string>
    <string name="update_downloading">update_downloading</string>
    <string name="update_finish">update_finish</string>
    <string name="update_start">update_start</string>
    <string name="update_task">update_task</string>
    

</resources>