<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_margin="4.0dip"
	android:layout_above="@+id/layBottom"
	android:layout_below="@+id/layTop"
	>
	<RelativeLayout
		android:background="@color/gray"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		>
		<ScrollView
			android:background="@color/white"
			android:padding="4.0dip"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_margin="1.0dip"
			>
			<RelativeLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				>
				<TextView
					android:textColor="@color/black"
					android:gravity="center"
					android:id="@+id/tvCardName"
					android:layout_width="70.0dip"
					android:layout_height="48.0dip"
					android:text="@string/search_name"
					>
				</TextView>
				<EditText
					android:id="@+id/etCardName"
					android:layout_width="fill_parent"
					android:layout_height="48.0dip"
					android:layout_toRightOf="@+id/tvCardName"
					>
				</EditText>
				<TextView
					android:textColor="@color/black"
					android:gravity="center"
					android:id="@+id/tvCardBelongs"
					android:layout_width="70.0dip"
					android:layout_height="48.0dip"
					android:text="@string/search_belongs"
					android:layout_below="@+id/tvCardName"
					>
				</TextView>
				<Spinner
					android:id="@+id/spCardBelongs"
					android:layout_width="fill_parent"
					android:layout_height="48.0dip"
					android:layout_toRightOf="@+id/tvCardBelongs"
					android:layout_below="@+id/etCardName"
					>
				</Spinner>
				<TextView
					android:textColor="@color/black"
					android:gravity="center"
					android:id="@+id/tvCardType"
					android:layout_width="70.0dip"
					android:layout_height="48.0dip"
					android:text="@string/search_type"
					android:layout_below="@+id/tvCardBelongs"
					>
				</TextView>
				<Spinner
					android:textSize="14.0dip"
					android:id="@+id/spCardType"
					android:layout_width="fill_parent"
					android:layout_height="48.0dip"
					android:layout_toLeftOf="@+id/spCardTunner"
					android:layout_toRightOf="@+id/tvCardType"
					android:layout_below="@+id/spCardBelongs"
					>
				</Spinner>
				<Spinner
					android:textSize="14.0dip"
					android:id="@+id/spCardTunner"
					android:layout_width="110.0dip"
					android:layout_height="48.0dip"
					android:layout_below="@+id/spCardTunner"
					android:layout_alignParentRight="true"
					>
				</Spinner>
				<TextView
					android:textColor="@color/black"
					android:gravity="center"
					android:id="@+id/tvCardRace"
					android:layout_width="70.0dip"
					android:layout_height="48.0dip"
					android:text="@string/search_race"
					android:layout_below="@+id/tvCardType"
					>
				</TextView>
				<Spinner
					android:id="@+id/spCardRace"
					android:layout_width="fill_parent"
					android:layout_height="48.0dip"
					android:layout_toRightOf="@+id/tvCardRace"
					android:layout_below="@+id/spCardType"
					>
				</Spinner>
				<TextView
					android:textColor="@color/black"
					android:gravity="center"
					android:id="@+id/tvCardAttribute"
					android:layout_width="70.0dip"
					android:layout_height="48.0dip"
					android:text="@string/search_attribute"
					android:layout_below="@+id/tvCardRace"
					>
				</TextView>
				<Spinner
					android:id="@+id/spCardAttribute"
					android:layout_width="fill_parent"
					android:layout_height="48.0dip"
					android:layout_toRightOf="@+id/tvCardAttribute"
					android:layout_below="@+id/spCardRace"
					>
				</Spinner>
				<TextView
					android:textColor="@color/black"
					android:gravity="center"
					android:id="@+id/tvCardLevel"
					android:layout_width="70.0dip"
					android:layout_height="48.0dip"
					android:text="@string/search_level"
					android:layout_below="@+id/tvCardAttribute"
					>
				</TextView>
				<Spinner
					android:id="@+id/spCardLevel"
					android:layout_width="fill_parent"
					android:layout_height="48.0dip"
					android:layout_toRightOf="@+id/tvCardLevel"
					android:layout_below="@+id/spCardAttribute"
					>
				</Spinner>
				<TextView
					android:textColor="@color/black"
					android:gravity="center"
					android:id="@+id/tvCardRare"
					android:layout_width="70.0dip"
					android:layout_height="48.0dip"
					android:text="@string/search_rare"
					android:layout_below="@+id/tvCardLevel"
					>
				</TextView>
				<Spinner
					android:id="@+id/spCardRare"
					android:layout_width="fill_parent"
					android:layout_height="48.0dip"
					android:layout_toRightOf="@+id/tvCardRare"
					android:layout_below="@+id/spCardLevel"
					>
				</Spinner>
				<TextView
					android:textColor="@color/black"
					android:gravity="center"
					android:id="@+id/tvCardLimit"
					android:layout_width="70.0dip"
					android:layout_height="48.0dip"
					android:text="@string/search_limit"
					android:layout_below="@+id/tvCardRare"
					>
				</TextView>
				<Spinner
					android:id="@+id/spCardLimit"
					android:layout_width="fill_parent"
					android:layout_height="48.0dip"
					android:layout_toRightOf="@+id/tvCardLimit"
					android:layout_below="@+id/spCardRare"
					>
				</Spinner>
				<TextView
					android:textColor="@color/black"
					android:gravity="center"
					android:id="@+id/tvCardAttack"
					android:layout_width="70.0dip"
					android:layout_height="48.0dip"
					android:text="@string/search_attack"
					android:layout_below="@+id/tvCardLimit"
					>
				</TextView>
				<EditText
					android:id="@+id/etCardAttack"
					android:layout_width="fill_parent"
					android:layout_height="48.0dip"
					android:layout_toRightOf="@+id/tvCardAttack"
					android:layout_below="@+id/spCardLimit"
					>
				</EditText>
				<TextView
					android:textColor="@color/black"
					android:gravity="center"
					android:id="@+id/tvCardDefense"
					android:layout_width="70.0dip"
					android:layout_height="48.0dip"
					android:text="@string/search_defense"
					android:layout_below="@+id/tvCardAttack"
					>
				</TextView>
				<EditText
					android:id="@+id/etCardDefense"
					android:layout_width="fill_parent"
					android:layout_height="48.0dip"
					android:layout_toRightOf="@+id/tvCardDefense"
					android:layout_below="@+id/etCardAttack"
					>
				</EditText>
				<TextView
					android:textColor="@color/black"
					android:gravity="center"
					android:id="@+id/tvCardEffect"
					android:layout_width="70.0dip"
					android:layout_height="48.0dip"
					android:text="@string/search_effect"
					android:layout_below="@+id/tvCardDefense"
					>
				</TextView>
				<Spinner
					android:id="@+id/spCardEffect"
					android:layout_width="fill_parent"
					android:layout_height="48.0dip"
					android:layout_toRightOf="@+id/tvCardEffect"
					android:layout_below="@+id/etCardDefense"
					>
				</Spinner>
				<RelativeLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@+id/tvCardEffect"
					android:layout_centerHorizontal="true"
					>
					<Button
						android:id="@+id/btnSearchCard"
						android:layout_width="100.0dip"
						android:layout_height="48.0dip"
						android:layout_marginTop="8.0dip"
						android:layout_marginBottom="8.0dip"
						android:text="@string/search_search"
						>
					</Button>
					<Button
						android:id="@+id/btnSearchReset"
						android:layout_width="100.0dip"
						android:layout_height="48.0dip"
						android:layout_marginTop="8.0dip"
						android:layout_marginBottom="8.0dip"
						android:text="@string/search_reset"
						android:layout_toRightOf="@+id/btnSearchCard"
						>
					</Button>
				</RelativeLayout>
			</RelativeLayout>
		</ScrollView>
	</RelativeLayout>
</RelativeLayout>
