<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/white"
	android:padding="8.0dip"
	android:layout_width="fill_parent"
	android:layout_height="200dip"
	android:layout_margin="8.0dip"
	>
	<ImageView
		android:id="@+id/ivIcon"
		android:background="@drawable/icon"
		android:layout_width="48.0dip"
		android:layout_height="48.0dip"
		>
	</ImageView>
	<TextView
	    android:textColor="@color/black"
		android:gravity="center_horizontal"
		android:id="@+id/appname"
		android:layout_width="48.0dip"
		android:layout_height="24.0dip"
		android:layout_marginLeft="8.0dip"
		android:text="@string/app_name"
		android:layout_toRightOf="@+id/ivIcon"
		>
	</TextView>

	<TextView
	    android:id="@+id/tvVersion"
	    android:layout_width="48.0dip"
	    android:layout_height="24.0dip"
	    android:layout_below="@+id/appName"
	    android:layout_marginLeft="8.0dip"
	    android:layout_toLeftOf="@+id/ivOcgSoft"
	    android:layout_toRightOf="@+id/ivIcon"
	    android:gravity="center_horizontal"
	    android:text="@string/app_version" >

	</TextView>
	<TextView
		android:id="@+id/tvSplit"
		android:background="@color/gray"
		android:layout_width="2.0dip"
		android:layout_height="1.0dip"
		android:layout_marginTop="8.0dip"
		android:layout_below="@+id/ivIcon"
		>
	</TextView>
	<TextView
		android:textColor="@color/black"
		android:gravity="center_horizontal"
		android:id="@+id/tvAboutData"
		android:layout_width="48.0dip"
		android:layout_height="24.0dip"
		android:layout_marginLeft="8.0dip"
		android:layout_marginTop="8.0dip"
		android:layout_marginRight="8.0dip"
		android:text="@string/about_data"
		android:layout_below="@+id/tvSplit"
		>
	</TextView>
	<TextView
		android:textColor="@color/orange"
		android:gravity="center_horizontal"
		android:id="@+id/tvAboutApplication"
		android:layout_width="48.0dip"
		android:layout_height="24.0dip"
		android:layout_marginLeft="8.0dip"
		android:layout_marginTop="8.0dip"
		android:layout_marginRight="8.0dip"
		android:text="@string/about_application"
		android:layout_below="@+id/tvAboutData"
		>
	</TextView>
	<TextView
		android:textColor="@color/black"
		android:gravity="center_horizontal"
		android:id="@+id/tvAboutDate"
		android:layout_width="48.0dip"
		android:layout_height="24.0dip"
		android:layout_marginLeft="8.0dip"
		android:layout_marginTop="8.0dip"
		android:layout_marginRight="8.0dip"
		android:text="@string/about_date"
		android:layout_below="@+id/tvAboutApplication"
		>
	</TextView>
	<ImageView
		android:id="@+id/ivOcgSoft"
		android:background="@drawable/logo"
		android:layout_width="48.0dip"
		android:layout_height="24.0dip"
		android:layout_marginTop="8.0dip"
		android:layout_below="@+id/tvAboutDate"
		android:layout_centerHorizontal="true"
		>
	</ImageView>
</RelativeLayout>
