<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/white"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<RelativeLayout
		android:id="@+id/layAssignedTop"
		android:background="@drawable/bottombar"
		android:layout_width="fill_parent"
		android:layout_height="48.0dip"
		>
		<Button
			android:textSize="11.0dip"
			android:textColor="@color/white"
			android:id="@+id/btnAssignedLeft"
			android:background="@drawable/button_style"
			android:layout_width="48.0dip"
			android:layout_height="32.0dip"
			android:layout_marginLeft="4.0dip"
			android:text="@string/back"
			android:layout_centerVertical="true"
			>
		</Button>
		<TextView
			android:textSize="20.0dip"
			android:textColor="@color/white"
			android:gravity="center"
			android:id="@+id/tvAssignedPageName"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_marginRight="36.0dip"
			android:text="@string/page_assignedcard"
			android:layout_toRightOf="@+id/btnAssignedLeft"
			>
		</TextView>
	</RelativeLayout>
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_margin="4.0dip"
		android:layout_below="@+id/layAssignedTop"
		>
		<RelativeLayout
			android:background="@color/gray"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			>
			<RelativeLayout
				android:background="@color/white"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_margin="1.0dip"
				>
				<TextView
					android:textSize="16.0dip"
					android:textColor="@color/black"
					android:gravity="center"
					android:id="@+id/tvAssignedMasterName"
					android:layout_width="fill_parent"
					android:layout_height="24.0dip"
					android:layout_margin="4.0dip"
					android:text="@string/top100_date"
					>
				</TextView>
				<ListView
					android:id="@+id/lvAssignedCard"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:layout_margin="4.0dip"
					android:cacheColorHint="#00000000"
					android:divider="@color/gray"
					android:dividerHeight="1.0dip"
					android:layout_below="@+id/tvAssignedMasterName"
					>
				</ListView>
			</RelativeLayout>
		</RelativeLayout>
	</RelativeLayout>
</RelativeLayout>
