<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<ScrollView
		android:id="@+id/svLimit"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		>
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			>
			<TextView
				android:textSize="20.0dip"
				android:textColor="@color/black"
				android:gravity="center"
				android:id="@+id/tvLimitTitle"
				android:layout_width="fill_parent"
				android:layout_height="24.0dip"
				android:text="@string/limit_date"
				>
			</TextView>
			<TextView
				android:textColor="@color/white"
				android:gravity="center"
				android:id="@+id/tvLimitBanned"
				android:background="@color/black"
				android:paddingLeft="16.0dip"
				android:layout_width="fill_parent"
				android:layout_height="24.0dip"
				android:layout_marginLeft="4.0dip"
				android:layout_marginTop="8.0dip"
				android:layout_marginRight="4.0dip"
				android:text="@string/card_banned"
				android:layout_below="@+id/tvLimitTitle"
				>
			</TextView>
			<TextView
				android:background="@color/red"
				android:layout_width="10.0dip"
				android:layout_height="10.0dip"
				android:layout_marginLeft="8.0dip"
				android:layout_marginTop="15.0dip"
				android:layout_below="@+id/tvLimitTitle"
				>
			</TextView>
			<ListView
				android:id="@+id/lvBanned"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4.0dip"
				android:layout_marginRight="4.0dip"
				android:cacheColorHint="#00000000"
				android:divider="@color/gray"
				android:dividerHeight="1.0dip"
				android:layout_below="@+id/tvLimitBanned"
				>
			</ListView>
			<TextView
				android:textColor="@color/white"
				android:gravity="center"
				android:id="@+id/tvLimit1"
				android:background="@color/black"
				android:paddingLeft="16.0dip"
				android:layout_width="fill_parent"
				android:layout_height="24.0dip"
				android:layout_marginLeft="4.0dip"
				android:layout_marginTop="8.0dip"
				android:layout_marginRight="4.0dip"
				android:text="@string/card_limit1"
				android:layout_below="@+id/lvBanned"
				>
			</TextView>
			<TextView
				android:background="@color/blue"
				android:layout_width="10.0dip"
				android:layout_height="10.0dip"
				android:layout_marginLeft="8.0dip"
				android:layout_marginTop="15.0dip"
				android:layout_below="@+id/lvBanned"
				>
			</TextView>
			<ListView
				android:id="@+id/lvLimit1"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4.0dip"
				android:layout_marginRight="4.0dip"
				android:cacheColorHint="#00000000"
				android:divider="@color/gray"
				android:dividerHeight="1.0dip"
				android:layout_below="@+id/tvLimit1"
				>
			</ListView>
			<TextView
				android:textColor="@color/white"
				android:gravity="center"
				android:id="@+id/tvLimit2"
				android:background="@color/black"
				android:paddingLeft="16.0dip"
				android:layout_width="fill_parent"
				android:layout_height="24.0dip"
				android:layout_marginLeft="4.0dip"
				android:layout_marginTop="8.0dip"
				android:layout_marginRight="4.0dip"
				android:text="@string/card_limit2"
				android:layout_below="@+id/lvLimit1"
				>
			</TextView>
			<TextView
				android:background="@color/green"
				android:layout_width="10.0dip"
				android:layout_height="10.0dip"
				android:layout_marginLeft="8.0dip"
				android:layout_marginTop="15.0dip"
				android:layout_below="@+id/lvLimit1"
				>
			</TextView>
			<ListView
				android:id="@+id/lvLimit2"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4.0dip"
				android:layout_marginRight="4.0dip"
				android:cacheColorHint="#00000000"
				android:divider="@color/gray"
				android:dividerHeight="1.0dip"
				android:layout_below="@+id/tvLimit2"
				>
			</ListView>
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>
